<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Track Alliance</string>
    <string name="title_section1">Envios</string>
    <string name="title_section2">Bodegas</string>
    <string name="title_section3">Alianzas</string>
    <string name="title_section4">Entidades</string>
    <string name="title_section5">Perfil</string>

    <string name="alertUno">Desea cerrar sesion</string>
    <string name="confirmButtton1">SI</string>
    <string name="confirmButtton2">NO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Salir</string>
    <string name="urlServicios">http://aunar.qualitysolutions.co/controlador/fachada.php</string>

    <!-- Login -->
    <string name="correo">  Email</string>
    <string name="contrasena">  Password</string>
    <string name="iniciar">Entrar</string>
    <string name="titleProgres">Iniciando sesion</string>
    <string name="messageProgress">Espera unos segundos</string>
    <string name="loginMalo">Datos incorrectos</string>
    <string name="completar">Complete los campos</string>

    <!-- Bodega -->
    <string name="ubicacion">Ubicacion</string>
    <string name="capacidad">Capacidad</string>
    <string name="usado">Usado</string>
    <string name="comentario">Comentario</string>
    <string name="publicar">Publicar</string>

    <string-array name="ubicaciones">
        <item>Sultana</item>
        <item>Enea</item>
        <item>Malteria</item>
        <item>Santagueda</item>
        <item>Arauca</item>
    </string-array>


</resources>
